# gnostr-legit

./: .gitignore  CNAME  Cargo.toml  GNUmakefile  NOTES.md  README.md  TIME  act.mk  cargo.mk  index.html  make-legit.sh
.github/workflows/: automate.sh  automate.yml  cargo-build.yml  ghcr.io.yml  gnostr-docker.yml  macos-matrix.yml  macos-pre-release.yml  make-legit.yml  rust-cross.yml  ubuntu-host-matrix.yml  ubuntu-matrix.yml  ubuntu-pre-release.yml
.gnostr/: reflog
src/: gitminer.rs  lib.rs  main.rs  repo.rs  worker.rs
