[package]
name    = "gnostr-legit"
version = "0.0.7"
authors = ["@RandyMcMillan <randy.lee.mcmillan@gmail.com>", "John <john@throttle.io>"]
edition = "2018"
description = "gnostr blob manager and pow miner"
documentation = "https://legit.gnostr.org"
readme = "README.md"
homepage = "https://legit.gnostr.org/"
repository = "https://github.com/gnostr-org/gnostr-legit.git"
license = "MIT OR Apache-2.0"
keywords = ["git", "pow", "proof-of-work", "gnostr", "nostr"]
categories = ["command-line-utilities"]

[dependencies]
argparse    = "0.2.2"
chrono      = "0"
git2        = "^0.17"
gnostr-bins = "0.0.15"
pad = "0.1.6"
rust-crypto = "0.2.36"
sha2 = "0.10.7"
time        = "0.1.42"
#crypto      = "0.4.0"

[lib]
path = "src/lib.rs"


[workspace]
